--- a/public/sites/all/themes/sedermera/sass/elements/forms/_datepicker.scss
+++ b/public/sites/all/themes/sedermera/sass/elements/forms/_datepicker.scss
@@ -84,6 +84,7 @@
 
         td {
           padding: 1px;
+          height: auto;
 
           a {
             padding: 5px;
